--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -103,7 +103,7 @@ input, select, textarea {
 		font-weight: 300;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h1, h2, h3, h4, h5 {
 		font-weight: 400;
 		color: #483949;
 		line-height: 1.25em;
@@ -1792,6 +1792,8 @@ input, select, textarea {
 		.image.featured {
 			display: block;
 			width: 100%;
+			/* width: 300px; */
+			/* height: 400px; */
 			margin: 0 0 4em 0;
 		}
 
